--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,12 +21,13 @@ security:
             provider: app_user_provider
             login_throttling:
                 max_attempts: 3
-            form_login:
-                login_path: login
-                check_path: login
+            # form_login:
+            #     login_path: login
+            #     check_path: login
             logout:
                 path:   logout
                 target: home
+            custom_authenticator: App\Security\AppAuthenticator
 
     access_control:
         - { path: ^/admin/, roles: ROLE_admin}
