--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,47 +1,48 @@
 security:
+  password_hashers:
+    App\Entity\User:
+      algorithm: bcrypt
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
 
-    password_hashers:
-        App\Entity\User:
-            algorithm: bcrypt
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+  providers:
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: emailAddress
+    users_in_memory: { memory: null }
+    # used to reload user from session & other features (e.g. switch_user)
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
+    main:
+      lazy: true
+      provider: app_user_provider
+      login_throttling:
+        max_attempts: 3
+      # form_login:
+      #     login_path: login
+      #     check_path: login
+      logout:
+        path: logout
+        target: home
+      custom_authenticator: App\Security\AppAuthenticator
 
-    providers:
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: emailAddress
-        users_in_memory: { memory: null }
-        # used to reload user from session & other features (e.g. switch_user)
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            lazy: true
-            provider: app_user_provider
-            login_throttling:
-                max_attempts: 3
-            # form_login:
-            #     login_path: login
-            #     check_path: login
-            logout:
-                path:   logout
-                target: home
-            custom_authenticator: App\Security\AppAuthenticator
+  role_hierarchy:
+    ROLE_admin: ROLE_user
 
-    access_control:
-        - { path: ^/admin/, roles: ROLE_admin}
-        - { path: ^/profile, roles: ROLE_user }
-        - { path: '^/blog/\d+/edit$', roles: ['ROLE_user', 'ROLE_admin'] }
+  access_control:
+    - { path: ^/admin/, roles: ROLE_admin }
+    - { path: ^/blog/, roles: ROLE_user }
+    - { path: ^/user/, roles: ROLE_user }
 
-    access_denied_url: 'access_denied'
+  access_denied_url: "access_denied"
 
 when@test:
-    security:
-        password_hashers:
-
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4
-                time_cost: 3
-                memory_cost: 10
+  security:
+    password_hashers:
+      Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+        algorithm: auto
+        cost: 4
+        time_cost: 3
+        memory_cost: 10
