--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,7 @@
 twig:
-    default_path: '%kernel.project_dir%/templates'
+  default_path: "%kernel.project_dir%/templates"
+  cache: "%kernel.cache_dir%/twig"
 
 when@test:
-    twig:
-        strict_variables: true
+  twig:
+    strict_variables: true
