--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=e28edae02843a7d464a6a34d6d8a5773
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://bobo:bobo@127.0.0.1:3306/blog?serverVersion=5.7"
+DATABASE_URL="mysql://bobo:bobo@127.0.0.1:3306/blogV2?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
