--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "karser/karser-recaptcha3-bundle": "^0.1.24",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
-        "symfony/asset": "6.3.*",
+        "symfony/asset": "^6.3",
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
         "symfony/dotenv": "6.3.*",
